[package]
name = "bot-0931"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
diff = "0.1.13"
once_cell = "1.17.1"
poise = { version = "0.5.2", default-features = false }
regex = "1.7.3"
reqwest = "0.11.15"
serde = { version = "1.0.158", features = ["derive"] }
serenity = { version = "0.11.5", features = [
    "rustls_backend",
], default-features = false }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
