[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
diff = "0.1.13"
ipc2_host = { git = "https://github.com/y21/ipc2", version = "0.1.0" }
once_cell = "1.17.1"
poise = { version = "0.5.2", default-features = false }
regex = { version = "1.7.3", default-features = false }
reqwest = "0.11.15"
serde = { version = "1.0.158", features = ["derive"] }
serenity = { version = "0.11.5", features = [
    "native_tls_backend",
], default-features = false }
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.16"
shared = { path = "../shared" }
sysinfo = "0.28.4"
human-size = "0.4.2"
serde_json = "1.0.96"
sublime_fuzzy = "0.7.0"
itertools = "0.10.5"
bincode = "1.3.3"
