[package]
name = "doc-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
rustdoc-types = "0.20.0"
serde_json = "1.0.96"
sublime_fuzzy = "0.7.0"
itertools = "0.10.5"
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
rayon = "1.7.0"
rustc-hash = "1.1.0"
