[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dash_vm = { git = "https://github.com/y21/dash" }
dash_middle = { git = "https://github.com/y21/dash" }
ipc2_worker = { git = "https://github.com/y21/ipc2", version = "0.1.0" }
rand = "0.8.5"
shared = { path = "../shared" }
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
